--- a/medlabbloodbank/templates/donatenow.html
+++ b/medlabbloodbank/templates/donatenow.html
@@ -147,7 +147,7 @@
                                                     </div>
 
                                                     <div class="mb-3">
-                                                        <label for="donorHistory">Have you donated blood before?</label><br>
+                                                        <label for="donorHistory">1. Have you donated blood before?</label><br>
                                                         <input type="radio" id="yesDonor" name="donorHistory" value="yes" required>
                                                         <label for="yesDonor">Yes</label>
                                                         <input type="radio" id="noDonor" name="donorHistory" value="no" required>
@@ -155,49 +155,49 @@
                                                         <div class="error" data-error-for="notenetered"></div>
                                                     </div>
                                             
-                                                    <label for="difficulty">Did you experience any difficulty or discomfort during the previous donation?</label><br>
+                                                    <label for="difficulty">2. Did you experience any difficulty or discomfort during the previous donation?</label><br>
                                                     <input type="radio" id="yesDifficulty" name="difficulty" value="yes" required>
                                                     <label for="yesDifficulty">Yes</label>
                                                     <input type="radio" id="noDifficulty" name="difficulty" value="no" required>
                                                     <label for="noDifficulty">No</label><br><br>
                                                     <div class="error" data-error-for="notenetered"></div>
                                             
-                                                    <label for="donated">Have you ever been adviced not to donate blood?</label><br>
+                                                    <label for="donated">3. Have you ever been adviced not to donate blood?</label><br>
                                                     <input type="radio" id="yesDonated" name="donated" value="yes" required>
                                                     <label for="yesDonated">Yes</label>
                                                     <input type="radio" id="noDonated" name="donated" value="no" required>
                                                     <label for="noDonated">No</label><br><br>
                                                     <div class="error" data-error-for="notenetered"></div>
                                             
-                                                    <label for="allergies">Do you have any allergies?</label><br>
+                                                    <label for="allergies">4. Do you have any allergies?</label><br>
                                                     <input type="radio" id="yesAllergies" name="allergies" value="yes" required>
                                                     <label for="yesAllergies">Yes</label>
                                                     <input type="radio" id="noAllergies" name="allergies" value="no" required>
                                                     <label for="noAllergies">No</label><br><br>
                                                     <div class="error" data-error-for="notenetered"></div>
 
-                                                    <label for="alcohol">Do you use alcohol/drugs?</label><br>
+                                                    <label for="alcohol">5. Do you use alcohol/drugs?</label><br>
                                                     <input type="radio" id="yesAlcohol" name="alcohol" value="yes" required>
                                                     <label for="yesAlcohol">Yes</label>
                                                     <input type="radio" id="noAlcohol" name="alcohol" value="no" required> 
                                                     <label for="noAlcohol">No</label><br><br>
                                                     <div class="error" data-error-for="notenetered"></div>
 
-                                                    <label for="jail">Have you been in jail?</label><br>
+                                                    <label for="jail">6. Have you been in jail?</label><br>
                                                     <input type="radio" id="yesJail" name="jail" value="yes" required>
                                                     <label for="yesJail">Yes</label>
                                                     <input type="radio" id="noJail" name="jail" value="no" required>
                                                     <label for="noJail">No</label><br><br>
                                                     <div class="error" data-error-for="notenetered"></div>
 
-                                                    <label for="surgery">Any history of surgery or blood transfusion in the past 12 months?</label><br>
+                                                    <label for="surgery"7. >Any history of surgery or blood transfusion in the past 12 months?</label><br>
                                                     <input type="radio" id="yesSurgery" name="surgery" value="yes" required>
                                                     <label for="yesSurgery">Yes</label>
                                                     <input type="radio" id="noSurgery" name="surgery" value="no" required>
                                                     <label for="noSurgery">No</label><br><br>
                                                     <div class="error" data-error-for="notenetered"></div>
 
-                                                    <label for="diseased">In the last 6 months have you had any of the following?<br>
+                                                    <label for="diseased">8. In the last 6 months have you had any of the following?<br>
                                                     Unexplained weight loss, swollen galnds, recurrent diarrhoea, continuous low grade fever
                                                     </label><br>
                                                     <input type="radio" id="yesDiseased" name="diseased" value="yes" required>
@@ -206,7 +206,7 @@
                                                     <label for="noDiseased">No</label><br><br>
                                                     <div class="error" data-error-for="notenetered"></div>
 
-                                                    <label for="hivaids">Have you any reason to believe that you may be infected by HIV/AIDS?</label><br>
+                                                    <label for="hivaids">9. Have you any reason to believe that you may be infected by HIV/AIDS?</label><br>
                                                     <input type="radio" id="yesHivaids" name="hivaids" value="yes" required>
                                                     <label for="yesHivaids">Yes</label>
                                                     <input type="radio" id="noHivaids" name="hivaids" value="no" required>
@@ -215,21 +215,21 @@
 
                                                     <p><strong>For Women Only:</strong> Please answer the following questions.</p>
 
-                                                    <label for="pregnant">Are you pregnant? Have you had an abortion in the 12 months?</label><br>
+                                                    <label for="pregnant">10. Are you pregnant? Have you had an abortion in the 12 months?</label><br>
                                                     <input type="radio" id="yesPregnant" name="pregnant" value="yes">
                                                     <label for="yesPregnant">Yes</label>
                                                     <input type="radio" id="noPregnant" name="pregnant" value="no">
                                                     <label for="noPregnant">No</label><br><br>
                                                     <div class="error" data-error-for="notenetered"></div>
                                             
-                                                    <label for="child">Do you have child less than one year of age?</label><br>
+                                                    <label for="child">11. Do you have child less than one year of age?</label><br>
                                                     <input type="radio" id="yesChild" name="child" value="yes">
                                                     <label for="yesChild">Yes</label>
                                                     <input type="radio" id="noChild" name="child" value="no">
                                                     <label for="noChild">No</label><br><br>
                                                     <div class="error" data-error-for="notenetered"></div>
 
-                                                    <label for="feelgood">Are you on your menstral cycle now?</label><br>
+                                                    <label for="feelgood">12. Are you on your menstral cycle now?</label><br>
                                                     <input type="radio" id="yesFeelgood" name="feelgood" value="yes">
                                                     <label for="yesFeelgood">Yes</label>
                                                     <input type="radio" id="noFeelgood" name="feelgood" value="no">
