--- a/medlabbloodbank/templates/mainuser/add-hospitals.html
+++ b/medlabbloodbank/templates/mainuser/add-hospitals.html
@@ -98,7 +98,7 @@
                             <a href="{% url 'registereddonortable' %}"><i class="fa fa-wheelchair"></i> <span>Registered Donors</span></a>
                         </li>
                         <li class="active">
-                            <a href="{% url 'addhospitals' %}"><i class="fa fa-calendar"></i> <span>Add Hospitals</span></a>
+                            <a href="{% url 'registeredhospitaltable' %}"><i class="fa fa-calendar"></i> <span>Add Hospitals</span></a>
                         </li>
                         <!-- <li>
                             <a href="doctors.html"><i class="fa fa-calendar-check-o"></i> <span>Staffs</span></a>
@@ -126,7 +126,7 @@
                         <h4 class="page-title">Hospital Registration</h4>
                     </div>
                     <div class="col-sm-8 col-9 text-right m-b-20">
-                        <a href="add-patient.html" class="btn btn btn-primary btn-rounded float-right"><i class="fa fa-plus"></i> Add Patient</a>
+                        <a href="{% url 'hospitalregistration' %}" class="btn btn btn-primary btn-rounded float-right"><i class="fa fa-plus"></i> Add Hospital</a>
                     </div>
                 </div>
 				<div class="row">
