--- a/medlabbloodbank/templates/mainuser/profile.html
+++ b/medlabbloodbank/templates/mainuser/profile.html
@@ -80,7 +80,7 @@
                             <a href="{% url 'registereddonortable' %}"><i class="fa fa-wheelchair"></i> <span>Registered Donors</span></a>
                         </li>
                         <li>
-                            <a href="{% url 'addhospitals' %}"><i class="fa fa-calendar"></i> <span>Add Hospitals</span></a>
+                            <a href="{% url 'registeredhospitaltable' %}"><i class="fa fa-calendar"></i> <span>Add Hospitals</span></a>
                         </li>
                         
                         <li>
