--- a/medlabbloodbank/templates/mainuser/registeredhospitaltable.html
+++ b/medlabbloodbank/templates/mainuser/registeredhospitaltable.html
@@ -6,12 +6,16 @@
     
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-        <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico' %}">
+        <link rel="shortcut icon" type="image/x-icon" href="{% static 'mainuser/img/favicon.ico' %}">
         <title>Medlab Blood Bank</title>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="{% static 'mainuser/css/bootstrap.min.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'mainuser/css/font-awesome.min.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'mainuser/css/style.css' %}">
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.6/css/jquery.dataTables.css">
+        <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.6/js/jquery.dataTables.js"></script>
+
         
   
 </head>
@@ -119,8 +123,11 @@
             </div>
         </div>
         <div class="page-wrapper">
-            <h3 style="color:grey;" > Registered Hospitals</h3>
+            <h3 style="color: grey;">Registered Hospitals</h3>
             <div class="row">
+                <div class="col-sm-11 col-9 text-right m-b-20">
+                    <a href="{% url 'hospitalregistration' %}" class="btn btn btn-primary btn-rounded float-right"><i class="fa fa-plus"></i> Add Hospital</a>
+                </div>
                 <div class="col-md-12">
                     <div class="table-responsive">
                         <table class="table table-bordered table-striped custom-table datatable mb-0">
@@ -150,29 +157,31 @@
                                     <td>{{ hospital.status }}</td>
                                     <td class="text-right">
                                         <div class="dropdown dropdown-action">
-                                                    <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
-                                                    <div class="dropdown-menu dropdown-menu-right">
-                                                        <a class="dropdown-item" href="{% url 'hospitalregistration' %}"><i class="fa fa-pencil m-r-5"></i> Edit</a>
-                                                        <a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_hospital_{{ hospital.id }}"><i class="fa fa-trash-o m-r-5"></i> Delete</a>
-                                                    </div>
+                                            <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
+                                            <div class="dropdown-menu dropdown-menu-right">
+                                                <a class="dropdown-item" href="{% url 'hospitalregistration' %}"><i class="fa fa-pencil m-r-5"></i> Edit</a>
+                                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_hospital_{{ hospital.id }}"><i class="fa fa-trash-o m-r-5"></i> Delete</a>
+                                            </div>
                                         </div>
                                     </td>
                                 </tr>
-                                        <!-- Add a delete modal for each hospital here -->
-                                        <div id="delete_hospital_{{ hospital.id }}" class="modal fade delete-modal" role="dialog">
-                                            <div class="modal-dialog modal-dialog-centered">
-                                                <div class="modal-content">
-                                                    <div class="modal-body text-center">
-                                                        <img src="{% static 'mainuser/img/sent.png' %}" alt="" width="50" height="46">
-                                                        <h3>Are you sure want to delete {{ hospital.hospitalName }}?</h3>
-                                                        <div class="m-t-20">
-                                                            <a href="#" class="btn btn-white" data-dismiss="modal">Close</a>
-                                                            <button type="submit" class="btn btn-danger" data-hospital-id="{{ hospital.id }}">Delete</button>
-                                                        </div>
-                                                    </div>
+                                <!-- Add a delete modal for each hospital here -->
+                                <div id="delete_hospital_{{ hospital.id }}" class="modal fade delete-modal" role="dialog">
+                                    <div class="modal-dialog modal-dialog-centered">
+                                        <div class="modal-content">
+                                            <div class="modal-body text-center">
+                                                <img src="{% static 'mainuser/img/sent.png' %}" alt="" width="50" height="46">
+                                                <h3>Are you sure you want to delete {{ hospital.hospitalName }}?</h3>
+                                                <div class="m-t-20">
+                                                    <a href="#" class="btn btn-white" data-dismiss="modal">Close</a>
+                                                    <button type="button" class="btn btn-danger delete-hospital" data-hospital-id="{{ hospital.id }}">Delete</button>
+
+                                                    
                                                 </div>
                                             </div>
                                         </div>
+                                    </div>
+                                </div>
                                 {% endfor %}
                             </tbody>
                         </table>
@@ -180,49 +189,49 @@
                 </div>
             </div>
         </div>
-               
-           
-    </div>
-
-
-    <script>
-        $(document).ready(function () {
-            // Handle delete button click
-            $('.delete-hospital').click(function (e) {
-                e.preventDefault();
-                var rowToDelete = $(this).closest('tr');
-                var hospitalId = rowToDelete.data('hospital-id'); // Assuming you add 'data-hospital-id' to your table row.
     
-                // Display a confirmation dialog
-                if (confirm('Are you sure you want to mark this hospital as inactive?')) {
-                    // Perform AJAX request to update hospital status
-                    $.ajax({
-                        url: '/update_hospital_status/' + hospitalId + '/',
-                        type: 'POST',
-                        data: {
-                            'status': 'Inactive',
-                            'csrfmiddlewaretoken': '{{ csrf_token }}'
-                        },
-                        success: function () {
-                            // Remove the table row from the list
-                            rowToDelete.remove();
-                        },
-                        error: function () {
-                            alert('Error updating hospital status.');
-                        }
-                    });
-                }
-            });
-        });
-    </script>
     <!-- Add Bootstrap JavaScript or your JavaScript framework's JavaScript here -->
     <div class="sidebar-overlay" data-reff=""></div>
     <script src="{% static 'mainuser/js/jquery-3.2.1.min.js' %}"></script>
 	<script src="{% static 'mainuser/js/popper.min.js' %}"></script>
     <script src="{% static 'mainuser/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'mainuser/js/jquery.slimscroll.js' %}"></script>
-    <script src="{% static 'mainuser/js/Chart.bundle.js' %}"></script>
-    <script src="{% static 'mainuser/js/chart.js' %}"></script>
+   
     <script src="{% static 'mainuser/js/app.js' %}"></script>
+    <script>
+    // Get the CSRF token value
+    var csrfToken = $('[name=csrfmiddlewaretoken]').val();
+
+    $(document).ready(function () {
+        // Handle delete button click
+        $('.delete-hospital').click(function (e) {
+            e.preventDefault();
+            var rowToDelete = $(this).closest('tr');
+            var hospitalId = $(this).data('hospital-id');
+
+            // Display a confirmation dialog
+            if (confirm('Are you sure you want to mark this hospital as inactive?')) {
+                // Perform AJAX request to update hospital status
+                $.ajax({
+                    url: '/update_hospital_status/' + hospitalId + '/',
+                    type: 'POST',
+                    data: {
+                        'status': 'Inactive',
+                        'csrfmiddlewaretoken': csrfToken, // Include the CSRF token
+                    },
+                    success: function () {
+                        // Remove the table row from the list
+                        rowToDelete.remove();
+                    },
+                    error: function () {
+                        alert('Error updating hospital status.');
+                    }
+                });
+            }
+        });
+    });
+</script>
+
+    
 </body>
 </html>
